//apply plugin: 'com.android.library'
plugins {
    alias libs.plugins.android.library
    alias libs.plugins.devtools.ksp
    alias libs.plugins.dagger.hilt
}

android {
    compileSdk = libs.versions.compileSdkVersion.get() as Integer
    buildToolsVersion = libs.versions.buildTools.get()

    defaultConfig {
        minSdk = libs.versions.minSdkVersion.get() as Integer
        targetSdk = libs.versions.targetSdkVersion.get() as Integer
    }
    compileOptions {
        sourceCompatibility = JavaLanguageVersion.of(17)
        targetCompatibility = JavaLanguageVersion.of(17)
    }
    buildTypes {
        release {
           // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    lint {
        abortOnError = true
    }
    namespace = 'musicmate.jupnp.nio'
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    implementation project(':core')
    implementation project(':library:library')

    implementation libs.androidx.annotation
    implementation libs.androidx.core
    implementation libs.androidx.preference

    implementation libs.jupnp.android
    implementation libs.jupnp.support

    // commons-io removed - replaced with java.nio.file (migration complete)
    // rxandroid/rxjava removed - migrated to Kotlin StateFlow/coroutines
    // jackson removed - migrated to kotlinx.serialization & org.json
    implementation libs.square.okhttp3
    implementation libs.kotlin.coroutines.core
    implementation libs.dagger.hilt.android
    ksp libs.dagger.hilt.compiler
    ksp libs.androidx.hilt.compiler
}